create tree view

--- a/app/templates/app/menu.html
+++ b/app/templates/app/menu.html
@@ -7,7 +7,7 @@
             {% if item.menuitem_set.exists %}
                 <ul>
                     {% for sub_item in item.menuitem_set.all %}
-                        <li><a href="{{ sub_item.url }}">{{ sub_item.name }}</a></li>
+                        <li><a href="?{{ sub_item.url }}">{{ sub_item.name }}</a></li>
                     {% endfor %}
                 </ul>
             {% endif %}
