--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -5,6 +5,7 @@
     <title>Menu</title>
 </head>
 <body>
+{% load draw_menu %}
 {% draw_menu 'main_menu' %}
 
 <div class="container">{% block content %}{% endblock %}</div>
